mstream/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mstream
  namespace: final
spec:
  selector:
    app: mstream
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
