mstream/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mstream
  namespace: final
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mstream.my.kube.um.edu.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mstream
            port:
              number: 3001
